<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.angelo.mbelateste1.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settings_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textSize="14dp"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:gravity="center|left"
            android:text="@string/name" />

        <TextView
            android:id="@+id/settings_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:gravity="center|left"
            android:textSize="14dp"
            android:text="@string/email" />

        <TextView
            android:id="@+id/settings_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_phone_black_24dp"
            android:drawableStart="@drawable/ic_phone_black_24dp"
            android:gravity="center|left"
            android:textSize="14dp"
            android:text="@string/phone_number" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/line_horizontal" />

        <TextView
            android:id="@+id/settings_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_directions_car_black_24dp"
            android:drawableStart="@drawable/ic_directions_car_black_24dp"
            android:gravity="center|left"
            android:textSize="14dp"
            android:text="@string/account_status" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/line_horizontal" />

        <TextView
            android:id="@+id/settings_legal_infomation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:drawableLeft="@drawable/ic_content_black_24dp"
            android:drawableStart="@drawable/ic_content_black_24dp"
            android:textSize="14dp"
            android:text="@string/legal_information" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/line_horizontal" />

        <TextView
            android:id="@+id/settings_log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:drawableLeft="@drawable/ic_content_black_24dp"
            android:drawableStart="@drawable/ic_exit_to_app_24dp"
            android:textSize="14dp"
            android:text="@string/log_out" />
    </LinearLayout>

</ScrollView>
